trunk/Archive2/58/923ebbea9354a3/output
main.cpp:6:1: error: static assertion failed: !!
 static_assert( SizeOf<>::value, "!!");
 ^
